--- a/NewsTask.Mvc/Views/News/Index.cshtml
+++ b/NewsTask.Mvc/Views/News/Index.cshtml
@@ -22,6 +22,9 @@
                 @Html.DisplayNameFor(model => model.PublicationDate)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.ImageFile)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.AuthorId)
             </th>
             <th></th>
@@ -40,12 +43,15 @@
                 @Html.DisplayFor(modelItem => item.PublicationDate)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.ImageFile)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.AuthorId)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
